// Copyright 2026 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.edpaggregator;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/internal/edpaggregator/raw_impression_batch_state.proto";
import "wfa/measurement/internal/edpaggregator/raw_impression_metadata.proto";
import "wfa/measurement/internal/edpaggregator/raw_impression_state.proto";

option java_package = "org.wfanet.measurement.internal.edpaggregator";
option java_multiple_files = true;
option java_outer_classname = "RawImpressionMetadataServiceProto";

// Service for managing RawImpressionMetadata.
service RawImpressionMetadataService {
  // Creates a new RawImpressionMetadata entry for a single file.
  rpc CreateRawImpressionMetadata(CreateRawImpressionMetadataRequest)
      returns (RawImpressionMetadata);

  // Creates multiple RawImpressionMetadata entries in a single request.
  // Idempotent by blob_uri.
  rpc BatchCreateRawImpressionMetadata(BatchCreateRawImpressionMetadataRequest)
      returns (BatchCreateRawImpressionMetadataResponse);

  // Retrieves a specific RawImpressionMetadata entry by its primary key.
  rpc GetRawImpressionMetadata(GetRawImpressionMetadataRequest)
      returns (RawImpressionMetadata);

  // Lists RawImpressionMetadata entries for a specific batch.
  rpc ListRawImpressionMetadata(ListRawImpressionMetadataRequest)
      returns (ListRawImpressionMetadataResponse);

  // Marks a single RawImpressionMetadata entry as deleted (soft delete).
  rpc DeleteRawImpressionMetadata(DeleteRawImpressionMetadataRequest)
      returns (RawImpressionMetadata);

  // Marks all RawImpressionMetadata entries in a batch as deleted (soft
  // delete).
  rpc BatchDeleteRawImpressionMetadata(BatchDeleteRawImpressionMetadataRequest)
      returns (BatchDeleteRawImpressionMetadataResponse);

  // Updates the batch_state for all files in a batch.
  rpc SetBatchState(SetBatchStateRequest) returns (SetBatchStateResponse);

  // Lists batches with their states for a given upload.
  rpc ListBatches(ListBatchesRequest) returns (ListBatchesResponse);
}

message CreateRawImpressionMetadataRequest {
  RawImpressionMetadata raw_impression_metadata = 1;
  string request_id = 2;
}

message BatchCreateRawImpressionMetadataRequest {
  string data_provider_resource_id = 1;
  // The request message specifying the RawImpressionMetadata entries to create.
  // All child requests must have their `data_provider_resource_id` match the
  // parent `data_provider_resource_id`. A maximum of 50 RawImpressionMetadata
  // entries can be created in a batch.
  repeated CreateRawImpressionMetadataRequest requests = 2;
}

message BatchCreateRawImpressionMetadataResponse {
  repeated RawImpressionMetadata raw_impression_metadata = 1;
}

message GetRawImpressionMetadataRequest {
  string data_provider_resource_id = 1;
  string raw_impression_upload_id = 2;
  int64 batch_index = 3;
  int64 file_index = 4;
}

message ListRawImpressionMetadataRequest {
  string data_provider_resource_id = 1;
  string raw_impression_upload_id = 2;
  int64 batch_index = 3;

  // The maximum number of results to return.
  //
  // If unspecified, at most 50 results will be returned. The maximum value is
  // 100; values above this will be coerced to the maximum value.
  int32 page_size = 4;
  ListRawImpressionMetadataPageToken page_token = 5;

  message Filter {
    RawImpressionState state = 1;
  }
  Filter filter = 6;
}

message ListRawImpressionMetadataResponse {
  repeated RawImpressionMetadata raw_impression_metadata = 1;
  ListRawImpressionMetadataPageToken next_page_token = 2;
}

message ListRawImpressionMetadataPageToken {
  message After {
    google.protobuf.Timestamp create_time = 1;
    int64 file_index = 2;
  }
  After after = 1;
}

message DeleteRawImpressionMetadataRequest {
  string data_provider_resource_id = 1;
  string raw_impression_upload_id = 2;
  int64 batch_index = 3;
  int64 file_index = 4;
}

message BatchDeleteRawImpressionMetadataRequest {
  string data_provider_resource_id = 1;
  string raw_impression_upload_id = 2;
  int64 batch_index = 3;
}

message BatchDeleteRawImpressionMetadataResponse {
  repeated RawImpressionMetadata raw_impression_metadata = 1;
}

message SetBatchStateRequest {
  string data_provider_resource_id = 1;
  string raw_impression_upload_id = 2;
  int64 batch_index = 3;
  RawImpressionBatchState batch_state = 4;
}

message SetBatchStateResponse {
  int32 updated_count = 1;
}

message ListBatchesRequest {
  string data_provider_resource_id = 1;
  string raw_impression_upload_id = 2;

  // The maximum number of results to return.
  //
  // If unspecified, at most 50 results will be returned. The maximum value is
  // 100; values above this will be coerced to the maximum value.
  int32 page_size = 3;
  ListBatchesPageToken page_token = 4;
}

message ListBatchesResponse {
  message BatchInfo {
    int64 batch_index = 1;
    RawImpressionBatchState batch_state = 2;
    int32 file_count = 3;
  }
  repeated BatchInfo batches = 1;
  ListBatchesPageToken next_page_token = 2;
}

message ListBatchesPageToken {
  message After {
    int64 batch_index = 1;
  }
  After after = 1;
}
