// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// A manifestation of an ExchangeWorkflow.Step for a particular Exchange.
message ExchangeWorkflow {
  // The type of participant that executes each step.
  enum Party {
    PARTY_UNSPECIFIED = 0;
    MODEL_PROVIDER = 1;
    DATA_PROVIDER = 2;
  }

  // Building blocks of the ExchangeWorkflow.
  message Step {
    // Identifier unique to the ExchangeStep.
    int32 step_index = 1;

    // Each step may or may not expect some prerequisite steps to be finished.
    repeated int32 prerequisite_step_indices = 3;

    // The party that should execute this step.
    Party party = 2;
  }
  // Sequence of steps of the workflow.
  repeated Step steps = 1;
}
